--- a/EmotionRecognitionUI/EmotionRecognitionUI/EmotionRecognitionUI.csproj
+++ b/EmotionRecognitionUI/EmotionRecognitionUI/EmotionRecognitionUI.csproj
@@ -20,5 +20,6 @@
         <PackageReference Include="Avalonia.Xaml.Interactions" Version="11.0.0-preview4" />
         <PackageReference Include="Prism.Core" Version="8.1.97" />
         <PackageReference Include="XamlNameReferenceGenerator" Version="1.5.1" />
+        <PackageReference Include="YandexDisk.Client" Version="1.3.27" />
     </ItemGroup>
 </Project>
