--- a/EmotionRecognitionUI/EmotionRecognitionUI/EmotionRecognitionUI.csproj
+++ b/EmotionRecognitionUI/EmotionRecognitionUI/EmotionRecognitionUI.csproj
@@ -19,6 +19,7 @@
         <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.0-preview4" />
         <PackageReference Include="Avalonia.Xaml.Interactions" Version="11.0.0-preview4" />
         <PackageReference Include="Prism.Core" Version="8.1.97" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
         <PackageReference Include="XamlNameReferenceGenerator" Version="1.5.1" />
         <PackageReference Include="YandexDisk.Client" Version="1.3.27" />
     </ItemGroup>
